--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,87 @@
-.App {
-  text-align: center;
+
+.input-group-addon {
+	overflow: hidden;
+	border-bottom-right-radius: 4rem;
+	border-top-right-radius: 4rem;
+	border: none;
+	min-width: 80px;
+	cursor: pointer;
+	transition: .2s all;
+}
+.input-group-addon:hover {
+	min-width: 90px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#td-input {
+	padding: 0;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+#heading {
+	color: transparent;
+	text-transform: uppercase;
+	-webkit-background-clip: text;
+	background-image: linear-gradient(to right, #86fde8, #acb6e5);
+	text-align: center;
 }
-
-.App-title {
-  font-size: 1.5em;
+.table-input {
+	border: none;
+	height: 38px;
+	width: 100%;
+	padding: 0 1rem;
+	box-shadow: 0rem 0rem .5rem rgba(28, 28, 211, .9);
+	line-height: 100%;
 }
-
-.App-intro {
-  font-size: large;
+.table-input:focus {
+	border: none;
+	outline: none;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.input-group-addon.addon-danger {
+	background-color: #d9534f;
 }
-
+.input-group-addon.addon-success {
+	background-color: #5cb85c;
+}
 .u-margin-medium {
-  margin-top: 3rem;
+	margin-top: 3rem;
+}
+.u-center-text {
+	text-align: center;
+}
+
+.label {
+	padding: 1rem;
+	margin: 0 auto;
+	cursor: pointer;
+	transition: .1s all;
+	
+}
+.label:hover {
+	padding: 1rem 1.9rem;
+}
+
+.panel {
+	margin-bottom: 0px;
+	height: 100%;
+}
+
+#main {
+	padding: 4rem 0;
+	margin: 0 auto;
+	max-width: 900px;
+}
+th {
+	color: rgb(73, 108, 207);
+	text-align: center;
+}
+.sort_selected::after {
+	content: '\f00c';
+	font-family: FontAwesome;
+	font-weight: normal;
+	font-style: normal;
+	margin: 0;
+	margin-left: 2rem;
+	display: inline-block;
+}
+
+.fa {
+	font-size: 1.6rem;
 }
